--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,18 +50,20 @@
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps" />
 
-        <activity android:name=".StatsActivity"></activity>
         <activity
+            android:name=".StatsActivity"/>
+        <!--<activity
             android:name=".StartDraw"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme"> <!-- screen stays in portrait mode -->
+            android:theme="@style/AppTheme"> <!- screen stays in portrait mode
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+    -->
     </application>
 
 </manifest>
