commented out some code in AndroidManifest.xml that was creating two main activites and two seperate apps.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,6 +63,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        BASICALLY it was starting up two main activites so whatever was happening in the one
+        would happen in the other.
     -->
     </application>
 
