--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,20 +52,13 @@
 
         <activity
             android:name=".StatsActivity"/>
-        <!--<activity
+        <activity
             android:name=".StartDraw"
-            android:label="@string/app_name"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme"> <!- screen stays in portrait mode
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:label="@string/app_name"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        BASICALLY it was starting up two main activites so whatever was happening in the one
-        would happen in the other.
-    -->
+
+
+
     </application>
 
 </manifest>
